--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo": "~53.0.20",
     "expo-constants": "^17.1.7",
     "expo-font": "~13.3.2",
+    "expo-local-authentication": "^16.0.5",
+    "expo-notifications": "^0.31.4",
     "expo-secure-store": "^14.2.3",
     "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
